k8s/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkding
  namespace: linkding
  labels:
    app: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      nodeSelector:
        kubernetes.io/hostname: pi4-worker2
      containers:
      - name: linkding
        image: sissbruecker/linkding:latest
        ports:
        - containerPort: 9090
          name: http
        volumeMounts:
        - name: data
          mountPath: /etc/linkding/data
        resources:
          requests:
            cpu: 20m
            memory: 256Mi
          limits:
            cpu: 2000m
            memory: 512Mi
        startupProbe:
          httpGet:
            path: /health
            port: 9090
          periodSeconds: 10
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 9090
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 9090
          periodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: linkding-data
